# fastapi-react-demo

./: .coverage  README.md  docker-compose.yml
.github/workflows/: client_tests.yml  python_tests.yml
client/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
client/src/: portfolio_summary.css  portfolio_summary.js  welcome_page.css  welcome_page.js
client/src/app/: layout.tsx  page.tsx  types.tsx
client/src/app/component/: ContactCreateForm.tsx  ContactsList.tsx
client/src/app/lib/: api.ts
public/: index.html
server/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
server/server/: __init__.py  __main__.py  settings.py
server/server/exception/: base_exception.py  base_exception_handler.py
server/server/infra/: __init__.py
server/server/infra/db/: __init__.py  dependencies.py  utils.py
server/server/infra/db/migrations/: env.py
server/server/infra/db/migrations/versions/: 2023-08-22-23-04_001_contact.py  2025-10-15-22-42_ea9e6561ed50.py
server/server/infra/db/model/: __init__.py  base.py  contact_dto.py
server/server/infra/db/repository/: base.py  contact.py
server/server/tests/: test_contact_api.py
server/server/usecase/contact/: contact_command_model.py  contact_command_service.py  contact_model.py  contact_query_model.py  contact_query_service.py  contact_service.py
server/server/web/: application.py  lifetime.py
server/server/web/api/: __init__.py  contact.py  monitoring.py
src/: index.js  portfolio_form.css  portfolio_form.js
