[tool.poetry]
name = "server"
version = "0.1.0"
description = "Descartes Underwriting Tech Test"
authors = ["Wenzhuo Zhao <zslyvain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
yarl = "^1.9.2"
pydantic-settings = "^2.0.3"
SQLAlchemy = {version = "^2.0.0", extras = ["asyncio"]}
alembic = "^1.11.3"
asyncpg = {version = "^0.28.0", extras = ["sa"]}
greenlet = "^2.0.2"
ujson = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
mypy = "*"
isort = "*"
pre-commit = "*"
wemake-python-styleguide = "*"
black = "*"
autoflake = "*"
pytest-cov = "*"
anyio = "*"
pytest-env = "*"
httpx = "*"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
